@@ -5,7 +5,7 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-speech-rpc</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.4</version>
 
   <properties>
     <jsapi2.groupId>com.github.umjammer.jsapi2</jsapi2.groupId> <!-- org.jvoicexml / com.github.umjammer.jsapi2 -->
@@ -101,6 +101,8 @@
 
                   <vmArgs>
                     <vmArg>-ea</vmArg>
+                    <vmArg>--add-opens</vmArg>
+                    <vmArg>java.base/java.lang=ALL-UNNAMED</vmArg>
                     <vmArg>-Dapple.laf.useScreenMenuBar=true</vmArg>
                     <vmArg>-Djava.util.logging.config.file=./logging.properties</vmArg>
                     <vmArg>-Dhtsvoice.dir=${user.home}/src/resources/htsvoice-tohoku-f01</vmArg>
@@ -119,7 +121,12 @@
                       <string>${javapackager.name}</string>
                       <key>CFBundleShortVersionString</key>
                       <string>${git.build.time}</string>
-                    ]]>
+                      <key>LSEnvironment</key>
+                      <dict>
+                        <key>GOOGLE_APPLICATION_CREDENTIALS</key>
+                        <string>${basedir}/tmp/google-app-credentials.json</string>
+                      </dict>
+                      ]]>
                       </additionalEntries>
                     </infoPlist>
                   </macConfig>
@@ -149,7 +156,7 @@
         <configuration>
           <argLine>
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
-            -Dvavi.util.logging.VaviFormatter.extraClassMethod=(org\.slf4j\.jul\.JDK14LoggerAdapter#innerNormalizedLoggingCallHandler|sun\.util\.logging\.internal\.LoggingProviderImpl.*#log)
+            -Dvavi.util.logging.VaviFormatter.extraClassMethod=(org\.slf4j\..*#.*|sun\.util\.logging\.internal\.LoggingProviderImpl.*#log)
           </argLine>
           <trimStackTrace>false</trimStackTrace>
         </configuration>
@@ -187,7 +194,7 @@
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons</artifactId>
-      <version>1.1.10</version>
+      <version>1.1.11</version>
     </dependency>
 
     <!-- jspai2 -->
@@ -200,7 +207,7 @@
     <dependency>
       <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
       <artifactId>vavi-speech2</artifactId>
-      <version>0.0.14</version>
+      <version>0.0.15</version>
     </dependency>
 
     <!-- client -->
